Fatal, el valgrid dona valors estranys

--- a/llegir-csv/Makefile
+++ b/llegir-csv/Makefile
@@ -1,4 +1,4 @@
-FILES_O = read.o ../arbre-binari/red-black-tree.c
+FILES_O = read.o
 
 # Exectuable to generate
 TARGET = read
@@ -9,12 +9,8 @@ CFLAGS = -Wall -Werror -g
 # Linker options 
 LFLAGS = -lm
 
-
-all: FILES_O
-	gcc $(FILES_O) ../arbre-binari/red-black-tree.o -o $(TARGET) $(LFLAGS) 
-
 read.o: read.c
 	gcc $(CFLAGS) read.c -c
 
-../arbre-binari/red-black-tree.o: ../arbre-binari/red-black-tree.c
-	cd ../arbre-binari; make red-black-tree.o
+clean:
+	rm $(FILES_O) -f
