--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 # Genera els executables i el main per a que pugui ser executat.
 
 # Fitxers externs a compilar
-FILES_O_OUT = llegir-csv/read.o arbre-binari/red-black-tree.o linked-list/linked-list.o
+FILES_O_OUT = llegir-csv/easyRead.o
 #linked-list/
 
 # Compilation options
@@ -13,13 +13,19 @@ LFLAGS = -lm
 # Exectuable to generate
 TARGET = main
 
+# main
 main: $(FILES_O_OUT) main.o
 	gcc $(FILES_O_OUT) main.o -o $(TARGET) $(LFLAGS)
 
-llegir-csv/read.o: llegir-csv/read.c
-	cd llegir-csv; make clean; make read.o
-linked-list/linked-list.o: linked-list/linked-list.c
-	cd linked-list; make clean; make linked-list.o
+main.o: main.c
+	gcc $(CFLAGS) main.c -c
+
+
+
+# Llibreries
+llegir-csv/easyRead.o: llegir-csv/easyRead.c
+	cd llegir-csv; make clean; make easyRead.o
+
 
 clean:
 	cd arbre-binari; make clean
