Structured main function, now takes care of program flow

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 # Genera els executables i el main per a que pugui ser executat.
 
 # Fitxers externs a compilar
-FILES_O_OUT = llegir-csv/easyRead.o
+FILES_O_OUT = llegir-csv/easyRead.o hash/hash.o
 #linked-list/
 
 # Compilation options
@@ -25,6 +25,8 @@ main.o: main.c
 # Llibreries
 llegir-csv/easyRead.o: llegir-csv/easyRead.c
 	cd llegir-csv; make clean; make easyRead.o
+hash/hash.o: hash/hash.c
+	cd hash; make clean; make hash/hash.o
 
 
 clean:
