Segon apartat polit amb valgrind

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -4,7 +4,7 @@
 FILES_O_OUT = ../llegir-csv/easyRead.o ../hash/hash.o ../util.o ../main.o
 
 # Quan unim tots els fitxers.
-FILES_O_IN  =               easyRead.o         hash.o    util.o    main.o
+FILES_O_IN  = easyRead.o hash.o util.o main.o linked-list.o
 
 # Compilation options
 CFLAGS = -Wall -Werror -g
@@ -16,12 +16,24 @@ LFLAGS = -lm
 TARGET = main
 
 # main
-main: $(FILES_O_OUT) Makefile
+main: $(FILES_O_IN) Makefile
 	gcc $(FILES_O_IN) -o $(TARGET) $(LFLAGS)
+
+main.o: ../main.c Makefile
+	gcc $(CFLAGS) -c ../main.c
 
 # Llibreries
 %.o: %.c Makefile
 	gcc $(CFLAGS) -c $<
+easyRead.o: ../llegir-csv/easyRead.c Makefile
+	gcc $(CFLAGS) -c ../llegir-csv/easyRead.c
+hash.o: ../hash/hash.c Makefile
+	gcc $(CFLAGS) -c ../hash/hash.c
+util.o: ../util.c Makefile
+	gcc $(CFLAGS) -c ../util.c
+linked-list.o: ../linked-list/linked-list.c Makefile
+	gcc $(CFLAGS) -c ../linked-list/linked-list.c
+
 
 # Elimina tot el generat
 clean:
