Reestructurat codi, reduit significativament el nombre de mallocs - **NOTA:** No s'ha comprobat amb el Valgrind els memory leaks. - Cambiat el nom de varies carpetes - Reutilitzant varies vegades les estructures ListData entre la HashTable i el RBTree - Afegida una opcio de debug al menu per mostrar l'arbre - Mogudes casi totes les funcions del main.c al util.c - renombrades moltes funcions per ser mes facils d'interpretar

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,14 @@
 CC = gcc
 CFLAGS = -Wall -Werror -g
+CFLAGS = -Wall -g
 LIBS = -lm
 
 # Sources here
-SRCS = main.c util.c serialize/serializer.c arbre-binari/red-black-tree.c hash/hash.c linked-list/linked-list.c llegir-csv/easyRead.c menu/menu.c
+SRCS = main.c util.c serialize/serializer.c rb-tree/red-black-tree.c hash/hash.c linked-list/linked-list.c read/easy-read.c menu/menu.c
 OBJS = $(SRCS:.c=.o)
 
 # !!! Insert executable name here (.exe for win64) !!!
-MAIN = bin/so2exec.exe
+MAIN = main.exe
 
 all: $(MAIN)
 	@echo Compilation successful
