--- a/doc/4Entrega/Makefile
+++ b/doc/4Entrega/Makefile
@@ -1,10 +1,13 @@
-name = dibu.ms
+name = onlydibu.ms
 
 out.ps: $(name) Makefile
 	pic $(name) | tbl | groff -ms > out.ps
 out.eps: out.ps
 	rm *.eps -f
 	ps2eps out.ps
-all: out.pdf
-out.pdf: out.ps
-	ps2pdf out.ps
+all: clear out.pdf
+out.pdf: out.eps
+	epspdf out.ps
+
+clear:
+	rm *.ps *.pdf
